--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "vnftjs",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Discord CommandHandler for TypeScript or JavaScript",
   "main": "lib",
   "types": "lib",
   "scripts": {
-    "test": "node lib",
+    "test": "rm -rf lib && tsc && node ./lib/secret.test.js",
     "build": "rm -rf lib && tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VonFriedricht/vnftjs.git"
   },
   "keywords": [
     "discord",
