--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vnftjs",
-  "version": "1.1.5",
+  "version": "1.2.1",
   "description": "Discord CommandHandler for TypeScript or JavaScript",
   "main": "lib",
   "types": "lib",
   "scripts": {
     "test": "rm -rf lib && tsc && node ./lib/secret.test.js",
+    "prettier": "prettier --print-width 120 --write ./src/{*,*/*,*/*/*,*/*/*/*}.ts",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
     "build": "rm -rf lib && tsc"
   },
