--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,13 @@
     "module": "commonjs",
     "declaration": true,
     "sourceMap": true,
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "types": ["node", "mocha"]
   },
   "exclude":["node_modules"],
   "include":[
     "./src/**/*.ts",
+    "./secret/**/*.ts",
+    "./test/**/*.ts", "secret.mocha.ts"
   ]
 }
