--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/src",
   "types": "lib/src",
   "scripts": {
-    "test": "mocha lib/test --timeout 60000",
+    "test": "npm run build && mocha lib/test --timeout 60000",
     "secret": "rm -rf lib && tsc && node ./lib/src/secret.test.js",
     "prettier": "prettier --print-width 120 --write ./src/{*,*/*,*/*/*,*/*/*/*}.ts",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
