--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "npm run build && mocha lib/test --timeout 60000",
     "secret": "rm -rf lib && tsc && node ./lib/src/secret.test.js",
-    "prettier": "prettier --print-width 120 --write ./src/{*,*/*,*/*/*,*/*/*/*}.ts",
+    "prettier": "prettier --print-width 120 --write ./{*,*/*,*/*/*,*/*/*/*}.ts",
     "generate-docs": "node_modules/.bin/jsdoc --configure .jsdoc.json --verbose",
     "build": "rm -rf lib && tsc"
   },
