--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm run roll
+      - run: npm build
 
   publish-npm:
     needs: build
