--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "files": [
     "dist"
   ],
-  "main": ".dist/index.js",
-  "types": ".typings/index.d.ts"
+  "main": "./dist/index.js",
+  "types": "./dist/typings/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
