--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handcom",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Simple and Object Oriented command handler for discord.js",
   "files": [
     "dist"
@@ -13,10 +13,12 @@
   "keywords": [],
   "author": "lbarcl",
   "license": "ISC",
+  "dependencies": {
+    "discord.js": "^14.11.0"
+  },
   "devDependencies": {
-    "discord.js": "^13.11.0",
     "typescript": "^4.7.4"
-  }, 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lbarcl/HandCom.git"
